[tool.poetry]
name = "funml"
version = "0.0.1"
description = "A collection of utilities to help write python as though it were an ML-kind of functional language like OCaml"
authors = ["Martin <team.sopherapps@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
black = "^22.12.0"
pre-commit = "^2.21.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocstrings = "^0.20.0"
mkdocs-material = "^9.0.6"
mdx-include = "^1.4.2"
mkdocstrings-python = "^0.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
